# Rust-PAR2

./: .woodpecker.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  dependabot-linear.yml  publish.yml
examples/: debug_repair.rs  microbench.rs
src/: gf.rs  gf_simd.rs  lib.rs  matrix.rs  recovery.rs  repair.rs  verify.rs
tests/: edge_cases.rs  gf_spec_compliance.rs  integration.rs  reed_solomon.rs  repair_scenarios.rs  simd_correctness.rs
tests/fixtures/damaged/: testdata.bin.1
tests/fixtures/intact/: testdata.bin.par2  testdata.bin.vol0+1.par2
tests/fixtures/missing/: testdata.bin.par2  testdata.bin.vol0+1.par2  testdata.bin.vol1+1.par2
tests/fixtures/unrepairable/: testdata.bin.par2  testdata.bin.vol0+1.par2
