[package]
name = "rust-par2"
version = "0.1.1"
edition = "2024"
description = "Pure Rust PAR2 verify and repair with SIMD-accelerated Galois field arithmetic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AusAgentSmith-org/Rust-PAR2"
readme = "README.md"
keywords = ["par2", "parity", "reed-solomon", "error-correction", "repair"]
categories = ["algorithms", "filesystem"]
rust-version = "1.85"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"

[dependencies]
md-5 = "0.10"
crc32fast = "1"
thiserror = "2"
tracing = "0.1"
rayon = "1"

# Use asm-accelerated MD5 on platforms that support GAS assembly (not MSVC)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
md-5 = { version = "0.10", features = ["asm"] }

[dev-dependencies]
rand = "0.10"
tempfile = "3"
tracing-subscriber = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1

[[example]]
name = "microbench"
