[package]
name = "rust-par2"
version = "0.1.2"
edition = "2024"
description = "Pure Rust PAR2 verify and repair with SIMD-accelerated Galois field arithmetic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AusAgentSmith-org/rust-par2"
readme = "README.md"
keywords = ["par2", "parity", "reed-solomon", "error-correction", "repair"]
categories = ["algorithms", "filesystem"]
rust-version = "1.85"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"

[dependencies]
md-5 = "0.11"
crc32fast = "1"
thiserror = "2"
tracing = "0.1"
rayon = "1"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
tracing-subscriber = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1

[[example]]
name = "microbench"
